getMeのエンドポイント変更
