# api/src/server/services/v1.ts
@@ -1,6 +1,6 @@
 import express from "express";
 import * as UserUsecase from "features/users/UserUsecase";
-import { Login } from "types/api";
+import { Login, Me } from "types/api";
 
 /**
  * POST /v1/login
@@ -22,4 +22,15 @@ export async function postLogin(req: express.Request, email: string, password: s
  */
 export async function postLogout(sessionId: string): Promise<void> {
 	await UserUsecase.logout(sessionId);
+}
+
+/**
+ * GET /v1/users/me
+ * get my user
+ * @param sessionID sessionID
+ * @returns user
+ */
+export async function getMe(sessionID: string): Promise<Me.GetMyUser.ResponseBody> {
+	const user = await UserUsecase.findAuthorizedUser(sessionID);
+	return UserUsecase.toResponse(user);
 }
